# hl_mai_09_rabbitmq

./: CMakeLists.txt  SimplePocoHandler.cpp  SimplePocoHandler.h  main_consume.cpp  main_publish.cpp  readme.md  techstack.md  techstack.yml
docker/: docker-compose.yml
